[package]
name = "xenforo-gallery-grabber"
version = "0.1.0"
authors = ["https://github.com/lunix33"]
edition = "2021"
description = "Gallery grabber for xenforo."

[dependencies]
anyhow = { version = "1.0", features = [ "std" ] }
clap = { version = "4.0", features = [ "derive" ] }
reqwest = { version = "0.11", features = [ "cookies", "blocking" ] }
scraper = { version = "0.13" }
chrono = { version = "0.4" }
regex = { version = "1.7" }
rand = { version = "0.8" }